--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
-    "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.15.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
